--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -1,5 +1,5 @@
-.userControls {position: absolute; right: 25px; top: 2px}
-.userButtons {float: right; margin-right: 50px}
+.userControls {position: absolute; right: 25px; top: 1px}
+.userButtons {float: right; margin: 10px 20px}
 .navIcon { float: left; width: 35px; height: 35px; line-height: 35px; }
 
 .notification-banner {position: absolute; top: -14px; left: 51px; z-index: 10001;}
@@ -7,23 +7,23 @@
 .new_dataset { line-height: 35px; padding-right: 10px; margin-right: 25px}
 .new_dataset .navIcon { background: url('images/add.png') center center no-repeat; }
 .session_actions, .user_actions { float: left; }
-.userControls .option {float: left; min-width: 35px; height: 35px;}
+.userControls .option {float: left; line-height: 34px; color: #636363; opacity: 0.8;; font-size: 10px; text-transform: uppercase; }
+.userControls .option:active, .userControls .option:hover {opacity: 1; color: #000}
 .account {cursor: pointer; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px;}
+.dot_separator { float: left; line-height: 33px; margin: 0px 5px}
 .header { background: #EDEBE1 }
-.option, .userControls .option { opacity: .7; -webkit-transition: .5s all; -moz-transition: .5s all; transition: .5s all; }
-.option:hover, .userControls .option:hover { opacity: 1; text-decoration: none;}
 .avatar {float: left}
 .avatar img {margin: 4px; border: 1px solid #D0E8F0}
 .user_settings .navIcon { background: url('images/settings.png') center center no-repeat; }
-.logout .navIcon { background: url('images/logout.png') center center no-repeat; }
-.user_profile .username { float: left; font-style: normal; width: 35px; height: 35px; line-height: 35px;}
-.user_profile .label {float: left; margin-right: 8px; font-style: normal; line-height: 35px;}
+.user_profile { float: left}
+.user_profile .username { color: #111; float: left; font-style: normal; height: 30px; line-height: 31px;}
+.user_profile .label {color: #636363; float: left; margin-right: 5px; font-style: normal; line-height: 31px;}
 .user_profile .username img { padding: 8px }
 #examples { margin-top: 50px }
 .twittericon { display: inline-block; width: 16px; height: 13px; margin: auto 3px auto auto; position: relative; top: 1px; *top: 0px; background-image: url('../images/twitter.png'); background-repeat: no-repeat; }
 
-.topbar{position:relative;height:30px;width:100%;background-color:#1A1A1A;}
-
+.project-title {font-family:"Geneva";font-size:13px;line-height:32px;padding: 2px 4px; margin-left: 53px;color: rgba(0, 0, 0, 0.75);webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;}
+#couchLogo{height: 25px;position: absolute;top: 4px;left: 10px;}
 
 .screenshot{
   margin-bottom: 20px;
@@ -91,11 +91,11 @@
   top: 5px;
 }
 
-.blue{color:#d5f3ff;font-family:"Geneva";font-size:13px;line-height:30px;padding:0 0 0 18px;}
+.blue{color:#d5f3ff;}
 .red{color:#B43D54;}
 .green{color:#42A360;}
 .white{color:#FFF;float:left;font-size:14px;margin:0;padding:0 1px 0 9px;}
-.separator{color:#FFF;}
+.separator{color:#636363;}
 .lightest_gray{color:#636363;font-family:"Geneva";font-size:13px;}
 .light_gray{color:#959595;font-family:"Geneva";font-size:13px;}
 .gray{color:#c2c2c2;font-family:"Geneva";font-size:13px;}
@@ -930,14 +930,27 @@ div.quickstart form textarea {
 
 /*REDIRECTORY*/
 
-.stream {position: absolute; top: 0px; right: 0px; left: 0px; bottom: 0px}
-.stream #header{position:absolute;top:0px;left:0px;right:0px;height:50px}
-.stream #wrapper{position:absolute;top:80px;left:0px;right:0px;bottom:0px;border:0 #C0CCCA solid; border-right-width:1px; border-bottom-width: 1px; border-left-width: 1px}
+.stream {background-color: #F0FFFD;}
+.stream .container{background-color: #fff; margin-top: 50px}
 .stream #left{position:absolute;top:0px;bottom:0px;left:0px;width:300px;overflow-y:auto;background-color: #F0FFFD}
 .stream #right{position:absolute;top:0px;bottom:0px;right:0px;left:300px;overflow-y:auto}
 .stream .mapContainer{width:100%; height: 100%; background-color: #F0FFFD}
-.stream .topbar{position:relative;height:30px;width:100%;background-color:#1A1A1A;}
-.stream .showbar{position:relative;height:50px;width:100%;background-color:#1F86A1;}
+.stream .top_bar{font-family: Geneva;background: #EDEBE1;position:relative;height:32px;width:100%;}
+.stream .showbar{position:relative;height:50px;width:100%;
+  background-color: #f5f5f5;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#f9f9f9), to(#f5f5f5));
+  background-image: -moz-linear-gradient(#f9f9f9, #f5f5f5);
+  background-image: -ms-linear-gradient(#f9f9f9, #f5f5f5);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f9f9f9), color-stop(100%, #f5f5f5));
+  background-image: -webkit-linear-gradient(#f9f9f9, #f5f5f5);
+  background-image: -o-linear-gradient(#f9f9f9, #f5f5f5);
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#f5f5f5', GradientType=0)";
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#f5f5f5', GradientType=0);
+  background-image: linear-gradient(#f9f9f9, #f5f5f5);
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #eee;
+}
 .stream .showbarItem{opacity: 0.5; float:right; line-height: 50px; text-transform: uppercase; font-size: 11px; color: #fff; height: 50px;}
 .stream .showbarItem:hover {opacity: 1; cursor:pointer; cursor:hand}
 .stream #separator {background: url('images/vdiv.png') no-repeat 0 11px; width: 2px; margin-left: 22px; opacity: 0.2}
@@ -959,12 +972,3 @@ div.quickstart form textarea {
 .stream .sidebar .value{width: 170px; float: left; color: #707070; }
 .stream .sidebar .link{text-decoration: underline}
 .stream .sidebar p{font-family:"Geneva";font-size:11px;line-height:12px;padding-bottom:10px;color:#252525;}
-.stream .blue{color:#d5f3ff;font-family:"Geneva";font-size:13px;line-height:30px;padding:0 0 0 18px;}
-.stream .red{color:#B43D54;}
-.stream .green{color:#42A360;}
-.stream .white{color:#FFF;float:left;font-size:14px;margin:0;padding:0 1px 0 9px;}
-.stream .separator{color:#FFF;}
-.stream .lightest_gray{color:#636363;font-family:"Geneva";font-size:13px;}
-.stream .light_gray{color:#959595;font-family:"Geneva";font-size:13px;}
-.stream .gray{color:#c2c2c2;font-family:"Geneva";font-size:13px;}
-.stream .yellow{color:#fff799;font-family:"Geneva";font-size:14px;}
