--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -934,7 +934,7 @@ div.quickstart form textarea {
 
 /*REDIRECTORY*/
 
-.stream .container{background-color: #fff; margin-top: 50px}
+.stream .container{background-color: #fff; margin-top: 50px; padding: 20px}
 .stream #left{position:absolute;top:0px;bottom:0px;left:0px;width:300px;overflow-y:auto;background-color: #F0FFFD}
 .stream #right{position:absolute;top:0px;bottom:0px;right:0px;left:300px;overflow-y:auto}
 .stream .mapContainer{width:100%; height: 100%; background-color: #F0FFFD}
