fix weird bug in chromium

--- a/attachments/style/recline.css
+++ b/attachments/style/recline.css
@@ -318,6 +318,10 @@ span.tooltip-status {
   right: 10px;
 }
 
+.iframeContainer iframe {
+  position: absolute;
+}
+
 .iframeDetails {
   line-height: 30px;
 }
