--- a/attachments/style/data-table.css
+++ b/attachments/style/data-table.css
@@ -468,6 +468,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 }
 
 #logged-in-status {
+  position: relative;
+  bottom: 1px;
   padding: 0 4px;
   font-size: 11px;
 }
