add delete all docs option to the edit menu

--- a/attachments/style/data-table.css
+++ b/attachments/style/data-table.css
@@ -1,7 +1,8 @@
 /*custom styles up top*/
 
 .sidebar {height:100%;width:299px;background-color:#F1FFFD;position:relative;overflow-x: hidden}
-.sidebar .title{font-family:"Lucida Grande", "Geneva";font-size:18px;line-height:24px;font-weight: 400; color: #084354; width: 240px; max-height: 44px; overflow: hidden}
+.sidebar hr { margin: 10px 15px 2px}
+.sidebar .title{font-family:"Lucida Grande", "Geneva";font-size:20px;line-height:24px;font-weight: 400; color: #084354; width: 240px; max-height: 44px; overflow: hidden}
 .sidebar .controls a, .sidebar .controls a:hover {color: #252525; text-decoration: none; background: transparent;}
 .sidebar .timestamp{opacity:0.6;font-family:"Geneva";font-size:10px;line-height:16px;width: 240px}
 .sidebar .edit {opacity:0.3;font-family:"Geneva";padding-left:12px;background-image:url('images/edit.png');background-position:0 4px;background-repeat:no-repeat;}
@@ -9,7 +10,7 @@
 .sidebar .close{position:absolute;right:10px;top:15px;width:16px;height:16px;opacity:0.2;background-image:url('images/close.png');}
 .sidebar .close:hover,.sidebar .edit:hover{opacity:1;cursor: pointer; cursor: hand;}
 .sidebar .top{background-color:#EBF9F7;border-bottom:1px solid #E1EEEC;padding:10px 16px 2px 16px;}
-.sidebar .description {font-family: "Geneva"; font-size: 12px; color: #252525; margin: 10px 15px}
+.sidebar .description {font-family: "Lucida Grande"; font-size: 12px; color: #707070;}
 .sidebar .datasource {height: 10px; background: url('images/tiny-triangle.png') no-repeat 0px 5px;padding-left: 7px; font-family: "Lucida Grande"; font-size: 10px; color: #959595; margin-top: 10px}
 .strong {font-weight: bold; margin-right: 5px}
 .sidebar .bottom{width: 100%; overflow-x: hidden}
