--- a/attachments/style/data-table.css
+++ b/attachments/style/data-table.css
@@ -10,7 +10,8 @@
 .sidebar .close{position:absolute;right:10px;top:15px;width:16px;height:16px;opacity:0.2;background-image:url('images/close.png');}
 .sidebar .close:hover,.sidebar .edit:hover{opacity:1;cursor: pointer; cursor: hand;}
 .sidebar .top{background-color:#EBF9F7;border-bottom:1px solid #E1EEEC;padding:10px 16px 2px 16px;}
-.sidebar .description {font-family: "Lucida Grande"; font-size: 12px; color: #707070;}
+.sidebar .top .btn { margin: 10px 30px; }
+.sidebar .description {font-family: "Lucida Grande"; font-size: 12px; color: #707070; margin: 5px 0px;}
 .sidebar .datasource {height: 10px; background: url('images/tiny-triangle.png') no-repeat 0px 5px;padding-left: 7px; font-family: "Lucida Grande"; font-size: 10px; color: #959595; margin-top: 10px}
 .strong {font-weight: bold; margin-right: 5px}
 .sidebar .bottom{width: 100%; overflow-x: hidden}
