--- a/attachments/style/data-table.css
+++ b/attachments/style/data-table.css
@@ -12,7 +12,7 @@
 .sidebar .top{background-color:#EBF9F7;border-bottom:1px solid #E1EEEC;padding:10px 16px 2px 16px;}
 .sidebar .top .btn { margin: 10px 30px; }
 .sidebar .description {font-family: "Lucida Grande"; font-size: 12px; color: #707070; margin: 5px 0px 0px 0px;}
-.sidebar .datasource {background: url('images/tiny-triangle.png') no-repeat 0px 6px;padding-left: 7px; font-family: "Lucida Grande"; font-size: 10px; color: #959595;}
+.sidebar .datasource {overflow: auto;background: url('images/tiny-triangle.png') no-repeat 0px 6px;padding-left: 7px; font-family: "Lucida Grande"; font-size: 10px; color: #959595;}
 .strong {font-weight: bold; margin-right: 5px}
 .sidebar .bottom{width: 100%; overflow-x: hidden}
 .sidebar .property {padding: 10px 16px; border-bottom: 1px solid #DDEFEC; overflow: auto}
