--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -93,7 +93,7 @@
 
 .resource-list{min-height:400px;position:relative;}
 .resources{margin-bottom:75px;}
-.resources .individual{border:3px solid #eee;min-height:375px;margin-top:40px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 1px 5px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);-moz-box-shadow:0 1px 5px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);box-shadow:0 1px 5px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);}
+.resources .individual{border:3px solid #eee;min-height:375px;margin:40px 0px 0px 80px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 1px 5px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);-moz-box-shadow:0 1px 5px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);box-shadow:0 1px 5px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);}
 .resources .thumbnail{background:url(images/placeholder.png) no-repeat center center;background-size:180px;display:block;margin:20px auto;height:150px;}
 .resources .description{padding:0 20px;}
 
