--- a/attachments/style/home.css
+++ b/attachments/style/home.css
@@ -1,4 +1,5 @@
 .userControls {position: absolute; right: 15px; top: 1px}
+.userControls #logged-in-status img {margin-top: 6px}
 .userButtons {float: right; margin: 10px 20px}
 .navIcon { float: left; width: 35px; height: 35px; line-height: 35px; }
 
@@ -96,6 +97,20 @@
 .resources .individual{border:3px solid #eee;min-height:375px;margin:40px 0px 0px 80px;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 1px 5px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);-moz-box-shadow:0 1px 5px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);box-shadow:0 1px 5px rgba(0, 0, 0, 0.25),inset 0 -1px 0 rgba(0, 0, 0, 0.1);}
 .resources .thumbnail{background:url(images/placeholder.png) no-repeat center center;background-size:180px;display:block;margin:20px auto;height:150px;}
 .resources .description{padding:0 20px;}
+
+
+.footer {
+  background-color: #eee;
+  min-width: 940px;
+  padding: 30px 0;
+  text-shadow: 0 1px 0 #fff;
+  border-top: 1px solid #e5e5e5;
+  -webkit-box-shadow: inset 0 5px 15px rgba(0,0,0,.025);
+     -moz-box-shadow: inset 0 5px 15px rgba(0,0,0,.025);
+}
+.footer p {
+  color: #555;
+}
 
 
 .wrapper {background:url('../images/diagonals.png'); overflow: auto}
