--- a/attachments/style/data-table.css
+++ b/attachments/style/data-table.css
@@ -469,9 +469,17 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   font-size: 11px;
   line-height: 24px;
 }
+
 #logged-in-status img {
   position: relative;
   bottom: 2px;
+}
+
+a#logged-in-status {
+  color: black;
+  font-weight: 500;
+  font-family: Helvetica Neue;
+  font-size: 11px;
 }
 
 .left-panel {
